# window-inspector

./: Cargo.toml  README.md  tauri.conf.json
capabilities/: default.json
src/: main.rs  overlay.rs  window_enum.rs  window_info.rs
ui/: index.html
