[package]
name = "window-inspector"
version = "0.1.0"
edition = "2021"

# tauri-build がこのセクションを参照するため必須
[package.metadata.tauri]

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Microsoft公式 Win32 APIバインディング
# featuresで必要なAPIを個別に有効化する（コンパイル時間短縮のため）
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "window-inspector"
path = "src/main.rs"
